--- a/my_app/templates/my_app/new_search.html
+++ b/my_app/templates/my_app/new_search.html
@@ -1,6 +1,6 @@
 {% extends 'base.html'%}
 {% block content %}
-    <h2 style = 'text-align : center'>{{ search|title }}></h2>
+    <h2 style = 'text-align : center'>{{ search|title }}</h2>
     <div class = 'row'>
         <div class = 'col s4'></div>
         <div class = 'card'>
